tests/core/snapshots/graphql-conformance-http-008.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "profiles": [
        {
          "handle": "user-1"
        },
        {
          "handle": "user-2"
        }
      ]
    }
  }
}
