tests/core/snapshots/graphql-conformance-http-008.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: non-null types require a return value",
        "locations": [
          {
            "line": 5,
            "column": 7
          }
        ],
        "path": [
          "profiles",
          2,
          "friends"
        ]
      }
    ]
  }
}
