tests/core/snapshots/graphql-conformance-http-008.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

type Counter {
  count: Int!
}

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type Page implements Profile {
  handle: String!
  id: ID!
  likers: Counter!
}

scalar PhoneNumber

interface Profile {
  handle: String!
  id: ID!
}

type Query {
  profiles(handles: [ID]!): [Profile!]!
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type User implements Profile {
  friends: Counter!
  handle: String!
  id: ID!
}

schema {
  query: Query
}
