tests/core/snapshots/graphql-conformance-http-009.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "profiles": [
        {
          "id": 1,
          "handle": "user-1"
        }
      ]
    }
  }
}
