tests/core/snapshots/graphql-conformance-http-010.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "nearby": {
        "id": 12,
        "name": "Location 12"
      }
    }
  }
}
