tests/core/snapshots/graphql-conformance-http-012.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "search": [
        {
          "name": "Person"
        },
        {
          "height": 100,
          "meta": {
            "iso": 200
          }
        }
      ]
    }
  }
}
