tests/core/snapshots/graphql-conformance-http-012.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "search": [
        {
          "name": "Person"
        },
        {
          "height": 100,
          "meta": {
            "iso": 200
          }
        }
      ]
    }
  }
}
