tests/core/snapshots/graphql-conformance-http-012.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Person {
  age: Int
  name: String
}

type Photo {
  height: Int
  meta: PhotoMeta
  width: Int
}

type PhotoMeta {
  aparture: Int
  iso: Int
  shutter: Int
}

type Query {
  search: [SearchResult!]!
}

union SearchResult = Person | Photo

schema {
  query: Query
}
